--- a/package.json
+++ b/package.json
@@ -17,12 +17,15 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.48.2",
     "react-router-dom": "^6.20.1",
+    "react-slick": "^0.30.2",
     "react-toastify": "^9.1.3",
+    "slick-carousel": "^1.8.1",
     "yup": "^1.3.2"
   },
   "devDependencies": {
     "@types/react": "^18.2.33",
     "@types/react-dom": "^18.2.7",
+    "@types/react-slick": "^0.23.13",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "@vitejs/plugin-react": "^4.0.3",
